--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,18 @@
 appdirs==1.4.4
 argcomplete==2.0.0
+certifi==2021.10.8
+charset-normalizer==2.0.12
+geojson==2.5.0
+idna==3.3
 Pillow==9.0.1
+pyowm==3.3.0
 pyserial==3.5
+PySocks==1.7.1
+python-dotenv==0.19.2
 python-escpos==2.2.0
 pyusb==1.2.1
 PyYAML==6.0
 qrcode==7.3.1
+requests==2.27.1
 six==1.16.0
+urllib3==1.26.8
