--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2021.10.8
 charset-normalizer==2.0.12
 geojson==2.5.0
 idna==3.3
+newsapi-python==0.2.6
 Pillow==9.0.1
 pyowm==3.3.0
 pyserial==3.5
